feat(alarm): 设备告警 + 等级升级 + 档案时间全局带时区（四项定案落地）
本轮把 2026-09-10 日志 §18/§19 的遗留项逐条定案并落地（用户决策），
后端闭环验收的缺口自此补齐——套件 7 个 / 156 条断言全绿。

B-8 档案时间统一带时区
- 新增 config/JacksonTimeConfig：全局把 LocalDateTime 走 Times.iso 序列化。
  此前只有走 Times.iso 的字段（alarms.triggeredAt 等）带偏移，而被
  BaseCrudController 原样返回的 BaseEntity.createdAt/updatedAt 是裸的，
  8 个实体子类的时间全都不带时区。
- 删掉 application.yml 的 spring.jackson.date-format：它只作用于
  java.util.Date，对 JSR-310 无效，正是它让人以为时间格式已配好。

B-9 latest 加次排序键
- orderByDesc(collectTime) 后补 orderByDesc(id)。选 id 而非 receive_time：
  主键单调递增，且没有 NULL 排序的方言差异（PG 的 DESC 把 NULL 排最前、
  H2 排最后）。

B-10 设备告警（验收第 5 条）
- V3 给 alarm 加 alarm_type/device_id 并放开 point_id NOT NULL：设备告警
  复用同一张表，状态机/处置/留痕/列表详情/SSE 全部白拿，只多一个筛选维度。
- 新增 DeviceAlarmMonitor 定时扫描，判据复用 DeviceStatusPolicy.OFFLINE_MINUTES
  （离线判定只有一处，不会与 /devices/{id}/status 错位）；从不报数的设备
  不告警（建档不是事件）；等级取 notice；扫描间隔可配（sweep-ms）。

B-11 等级升级（验收第 3 条）
- 同一测点+测项未解除警情至多一条，命中更高等级规则时就地升级（抬 level
  + 时间线追加 escalate），不另开平行警情；升级不查抑制窗口（抑制管的是
  「别重复开新警情」，升级不是新警情，否则一个爬到 +6.0 的点会被钉死在
  warning）；升级不改所属规则，恢复仍按最初触发那条规则判定。
- V4 补种子规则 defo_mm gte +5.0/恢复 +2.0/level=alarm：原有两条规则都是
  warning，没有更高等级可升，验收第 3 条原本演示不出来。

B-12 collectTime 非法不再兜底取 now()
- 解析失败静默取 now() 除了污染数据，还会掩盖设备离线（坏时间戳被盖上
  「刚刚收到」的章，而在线判定只认 last_report_time）。改为整条 REJECTED；
  receiveTime（平台侧时间）缺省仍取当前时间。

踩坑：MyBatis-Plus 的 eq(condition, col, val) 三个参数全部先求值，条件为
false 也拦不住 NPE——写成 eq(notBlank(x), col, x.trim()) 会让不传该参数的
请求全挂（表现为 04/05/07 共 29 条断言红，前端侧只看到「非 JSON」）。
另 Map.of().get(null) 会 NPE（size==0 时显式 requireNonNull），而设备告警
pointId 恰为 null，改用 Collections.emptyMap()。

验收：run-all.sh --fresh 空库 156/156；同库连跑三轮均全绿。
文档：契约 §0/§2/§4/§5、验收 README、A 侧清单与当日日志同步。